i update my project

--- a/src/app/coin-comp/coin-comp.component.html
+++ b/src/app/coin-comp/coin-comp.component.html
@@ -7,7 +7,7 @@
       <div class="checkbox">
         <label>
           <button type="button" [ngClass]="{'btn btn-danger':!coin.checked,'btn btn-success':coin.checked}"  (click)="Clicked()">
-            check
+            select
           </button>
           
         
